feat(i18n): add theme and plugin settings translations
- Add new translations for theme and plugin settings UI

- Update UI components to use i18n keys instead of hardcoded text

- Remove .cursorrules file as it's no longer needed

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -37,6 +37,13 @@
   "ui_themes": "Themes",
   "ui_store_themes": "Store Themes",
   "ui_installed_themes": "Installed Themes",
+  "ui_setting_theme_search_placeholder": "Search %d themes",
+  "ui_setting_theme_website": "Website",
+  "ui_setting_theme_uninstall": "Uninstall",
+  "ui_setting_theme_install": "Install",
+  "ui_setting_theme_preview": "Preview",
+  "ui_setting_theme_description": "Description",
+  "ui_setting_theme_empty_data": "Theme data is empty",
   "ui_back": "Back",
   "ui_operation": "Operation",
   "ui_query_hotkeys_hotkey": "Hotkey",
@@ -46,6 +53,47 @@
   "ui_query_hotkeys_silent": "Silent",
   "ui_query_hotkeys_silent_tooltip": "When selected, if the count of query result is 1, Wox will execute the query directly without showing the result list.\n\nThis is useful when you have a query that always return one result and you want to execute it directly.\nNote: This option is only available when the query result count is 1. Otherwise it will be ignored and notify a warning.",
   "ui_add": "Add",
+  "ui_query_shortcuts_shortcut": "Shortcut",
+  "ui_query_shortcuts_shortcut_tooltip": "Query shortcut. E.g. 'translate' => 'chatgpt translate'",
+  "ui_query_shortcuts_query": "Query",
+  "ui_query_shortcuts_query_tooltip": "The query represented by the shortcut.",
+  "ui_ai_providers_name": "Provider Name",
+  "ui_ai_providers_name_tooltip": "The name of the AI provider.",
+  "ui_ai_providers_api_key": "API Key",
+  "ui_ai_providers_api_key_tooltip": "The API key of the AI provider.",
+  "ui_ai_providers_host": "Host",
+  "ui_ai_providers_host_tooltip": "The host of the AI provider.",
+  "ui_ai_providers_api_key_required": "API key is required.",
+  "ui_ai_providers_host_required": "Host is required.",
+  "ui_search_plugins": "Search %d plugins",
+  "ui_plugin_website": "Website",
+  "ui_plugin_dev_tag": "dev",
+  "ui_plugin_uninstall": "Uninstall",
+  "ui_plugin_installing": "Installing...",
+  "ui_plugin_install": "Install",
+  "ui_plugin_disable": "Disable",
+  "ui_plugin_enable": "Enable",
+  "ui_plugin_tab_settings": "Settings",
+  "ui_plugin_tab_trigger_keywords": "Trigger Keywords",
+  "ui_plugin_tab_commands": "Commands",
+  "ui_plugin_tab_description": "Description",
+  "ui_plugin_tab_privacy": "Privacy",
+  "ui_plugin_no_trigger_keywords": "This plugin has no trigger keywords",
+  "ui_plugin_no_commands": "This plugin has no command",
+  "ui_plugin_no_data_access": "This plugin requires no data access",
+  "ui_plugin_data_access_title": "This plugin requires access to the following data:",
+  "ui_plugin_privacy_window_name": "Active window name",
+  "ui_plugin_privacy_window_name_desc": "E.g. you are using google chrome to view webpages, you activate Wox and this plugin will get the active window name as \"Google Chrome\"",
+  "ui_plugin_privacy_window_pid": "Active window process id",
+  "ui_plugin_privacy_window_pid_desc": "E.g. you are using google chrome to view webpages, you activate Wox and this plugin will get the active window process id as \"1234\"",
+  "ui_plugin_privacy_browser_url": "Active browser URL",
+  "ui_plugin_privacy_browser_url_desc": "E.g. you are using google chrome to view webpages, you activate Wox and this plugin will get the url of active tab you are viewing",
+  "ui_plugin_privacy_llm": "Large Language Model (LLM)",
+  "ui_plugin_privacy_llm_desc": "This plugin uses large language model to provide better results, you need to configure the model in LLM Tools plugin first",
+  "ui_plugin_trigger_keyword_column": "Keyword",
+  "ui_plugin_trigger_keyword_tooltip": "The keyword that triggers this plugin. * presents no keyword, any input will trigger this plugin.",
+  "ui_plugin_command_name_column": "Name",
+  "ui_plugin_command_desc_column": "Description",
   "plugin_app_open": "Open",
   "plugin_app_open_containing_folder": "Open Containing Folder",
   "plugin_app_copy_path": "Copy Path",
