--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -37,6 +37,13 @@
   "ui_themes": "Темы",
   "ui_store_themes": "Темы магазина",
   "ui_installed_themes": "Установленные темы",
+  "ui_setting_theme_search_placeholder": "Поиск %d тем",
+  "ui_setting_theme_website": "Веб-сайт",
+  "ui_setting_theme_uninstall": "Удалить",
+  "ui_setting_theme_install": "Установить",
+  "ui_setting_theme_preview": "Предпросмотр",
+  "ui_setting_theme_description": "Описание",
+  "ui_setting_theme_empty_data": "Данные темы пусты",
   "ui_back": "Назад",
   "ui_operation": "Операция",
   "ui_query_hotkeys_hotkey": "Горячая клавиша",
@@ -46,6 +53,47 @@
   "ui_query_hotkeys_silent": "Сильный",
   "ui_query_hotkeys_silent_tooltip": "Если выбран, и количество результатов запроса равно 1, Wox выполнит запрос непосредственно без отображения списка результатов.\n\nЭто полезно, когда у вас есть запрос, который всегда возвращает один результат, и вы хотите выполнить его непосредственно.\nПримечание: Эта опция доступна только в том случае, если количество результатов запроса равно 1. В противном случае она будет проигнорирована и будет выведено предупреждение.",
   "ui_add": "Добавить",
+  "ui_query_shortcuts_shortcut": "Горячая клавиша",
+  "ui_query_shortcuts_shortcut_tooltip": "Горячая клавиша для запроса. Например: 'translate' => 'chatgpt translate'",
+  "ui_query_shortcuts_query": "Запрос",
+  "ui_query_shortcuts_query_tooltip": "Запрос, представленный горячей клавишей",
+  "ui_ai_providers_name": "Имя поставщика",
+  "ui_ai_providers_name_tooltip": "Имя поставщика",
+  "ui_ai_providers_api_key": "API-ключ",
+  "ui_ai_providers_api_key_tooltip": "API-ключ поставщика",
+  "ui_ai_providers_host": "Хост",
+  "ui_ai_providers_host_tooltip": "Хост поставщика",
+  "ui_ai_providers_api_key_required": "API-ключ обязателен",
+  "ui_ai_providers_host_required": "Хост обязателен",
+  "ui_search_plugins": "Найти %d плагинов",
+  "ui_plugin_website": "Сайт",
+  "ui_plugin_dev_tag": "dev",
+  "ui_plugin_uninstall": "Удалить",
+  "ui_plugin_installing": "Установка...",
+  "ui_plugin_install": "Установить",
+  "ui_plugin_disable": "Отключить",
+  "ui_plugin_enable": "Включить",
+  "ui_plugin_tab_settings": "Настройки",
+  "ui_plugin_tab_trigger_keywords": "Ключевые слова",
+  "ui_plugin_tab_commands": "Команды",
+  "ui_plugin_tab_description": "Описание",
+  "ui_plugin_tab_privacy": "Конфиденциальность",
+  "ui_plugin_no_trigger_keywords": "Этот плагин не имеет ключевых слов",
+  "ui_plugin_no_commands": "Этот плагин не имеет команд",
+  "ui_plugin_no_data_access": "Этот плагин не требует доступа к данным",
+  "ui_plugin_data_access_title": "Этот плагин требует доступ к следующим данным:",
+  "ui_plugin_privacy_window_name": "Имя активного окна",
+  "ui_plugin_privacy_window_name_desc": "Например, вы используете google chrome для просмотра веб-страниц, вы активируете Wox и этот плагин получит имя активного окна как \"Google Chrome\"",
+  "ui_plugin_privacy_window_pid": "Идентификатор процесса активного окна",
+  "ui_plugin_privacy_window_pid_desc": "E.g. you are using google chrome to view webpages, you activate Wox and this plugin will get the active window process id as \"1234\"",
+  "ui_plugin_privacy_browser_url": "URL активного браузера",
+  "ui_plugin_privacy_browser_url_desc": "Например, вы используете google chrome для просмотра веб-страниц, вы активируете Wox и этот плагин получит URL активной вкладки, которую вы просматриваете",
+  "ui_plugin_privacy_llm": "Большая языковая модель (LLM)",
+  "ui_plugin_privacy_llm_desc": "Этот плагин использует большую языковую модель для предоставления лучших результатов, вам нужно настроить модель в плагине LLM Tools",
+  "ui_plugin_trigger_keyword_column": "Ключевое слово",
+  "ui_plugin_trigger_keyword_tooltip": "Ключевое слово, которое активирует этот плагин. * означает отсутствие ключевого слова, любой ввод активирует этот плагин.",
+  "ui_plugin_command_name_column": "Название",
+  "ui_plugin_command_desc_column": "Описание",
   "plugin_app_open": "Открыть",
   "plugin_app_open_containing_folder": "Открыть содержащую папку",
   "plugin_app_copy_path": "Копировать путь",
