--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -37,6 +37,13 @@
   "ui_themes": "主题",
   "ui_store_themes": "主题商店",
   "ui_installed_themes": "已安装主题",
+  "ui_setting_theme_search_placeholder": "搜索 %d 个主题",
+  "ui_setting_theme_website": "网站",
+  "ui_setting_theme_uninstall": "卸载",
+  "ui_setting_theme_install": "安装",
+  "ui_setting_theme_preview": "预览",
+  "ui_setting_theme_description": "描述",
+  "ui_setting_theme_empty_data": "主题数据为空",
   "ui_back": "返回",
   "ui_operation": "操作",
   "ui_query_hotkeys_hotkey": "快捷键",
@@ -46,6 +53,48 @@
   "ui_query_hotkeys_silent": "静默",
   "ui_query_hotkeys_silent_tooltip": "当选中时，如果查询结果数量为1，Wox将直接执行查询而不显示结果列表。\n\n这在您有一个总是返回一个结果的查询并且您希望直接执行它时非常有用。\n注意：此选项仅在查询结果数量为1时可用。否则将忽略并通知警告。",
   "ui_add": "添加",
+  "ui_query_shortcuts_shortcut": "快捷键",
+  "ui_query_shortcuts_shortcut_tooltip": "用于触发查询的快捷键。例如：'translate' => 'chatgpt translate'",
+  "ui_query_shortcuts_query": "查询",
+  "ui_query_shortcuts_query_tooltip": "查询内容",
+  "ui_ai_providers_name": "模型提供者",
+  "ui_ai_providers_name_tooltip": "模型提供者名称",
+  "ui_ai_providers_api_key": "API密钥",
+  "ui_ai_providers_api_key_tooltip": "API密钥",
+  "ui_ai_providers_host": "API地址",
+  "ui_ai_providers_host_tooltip": "API地址",
+  "ui_ai_providers_api_key_required": "API密钥是必需的",
+  "ui_ai_providers_host_required": "API地址是必需的",
+  "ui_search_plugins": "搜索 %d 个插件",
+  "plugin_manager_invalid_query_type": "无效的查询类型",
+  "ui_plugin_website": "网站",
+  "ui_plugin_dev_tag": "开发",
+  "ui_plugin_uninstall": "卸载",
+  "ui_plugin_installing": "安装中...",
+  "ui_plugin_install": "安装",
+  "ui_plugin_disable": "禁用",
+  "ui_plugin_enable": "启用",
+  "ui_plugin_tab_settings": "设置",
+  "ui_plugin_tab_trigger_keywords": "触发关键词",
+  "ui_plugin_tab_commands": "命令",
+  "ui_plugin_tab_description": "描述",
+  "ui_plugin_tab_privacy": "隐私",
+  "ui_plugin_no_trigger_keywords": "此插件没有触发关键词",
+  "ui_plugin_no_commands": "此插件没有命令",
+  "ui_plugin_no_data_access": "此插件不需要任何数据访问权限",
+  "ui_plugin_data_access_title": "此插件需要访问以下数据：",
+  "ui_plugin_privacy_window_name": "活动窗口名称",
+  "ui_plugin_privacy_window_name_desc": "例如：当你使用谷歌浏览器浏览网页时，激活 Wox，此插件将获取活动窗口名称为\"Google Chrome\"",
+  "ui_plugin_privacy_window_pid": "活动窗口进程ID",
+  "ui_plugin_privacy_window_pid_desc": "例如：当你使用谷歌浏览器浏览网页时，激活 Wox，此插件将获取活动窗口进程ID为\"1234\"",
+  "ui_plugin_privacy_browser_url": "活动浏览器URL",
+  "ui_plugin_privacy_browser_url_desc": "例如：当你使用谷歌浏览器浏览网页时，激活 Wox，此插件将获取你正在查看的标签页的URL",
+  "ui_plugin_privacy_llm": "大语言模型 (LLM)",
+  "ui_plugin_privacy_llm_desc": "此插件使用大语言模型来提供更好的结果，你需要先在 LLM Tools 插件中配置模型",
+  "ui_plugin_trigger_keyword_column": "关键词",
+  "ui_plugin_trigger_keyword_tooltip": "触发此插件的关键词。* 表示无关键词，任何输入都会触发此插件。",
+  "ui_plugin_command_name_column": "名称",
+  "ui_plugin_command_desc_column": "描述",
   "plugin_app_open": "打开",
   "plugin_app_open_containing_folder": "打开所在文件夹",
   "plugin_app_copy_path": "复制路径",
@@ -174,6 +223,5 @@
   "plugin_file_open_containing_folder": "打开所在文件夹",
   "plugin_manager_query_failed": "%s 查询失败",
   "plugin_manager_remove_from_favorite": "从收藏夹移除",
-  "plugin_manager_add_to_favorite": "添加到收藏夹",
-  "plugin_manager_invalid_query_type": "无效的查询类型"
+  "plugin_manager_add_to_favorite": "添加到收藏夹"
 }
