--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -1,5 +1,5 @@
 {
-  "show_wox_preferences": "Mostrar preferências do Wox",
+  "show_wox_preferences": "Mostrar Preferências do Wox",
   "selection_no_files_selected": "Nenhum arquivo selecionado",
   "selection_selected_files_count": "%d arquivos selecionados:",
   "selection_remaining_files_not_shown": "... mais %d arquivos não mostrados",
@@ -41,9 +41,11 @@
   "ui_setting_theme_website": "Site",
   "ui_setting_theme_uninstall": "Desinstalar",
   "ui_setting_theme_install": "Instalar",
+  "ui_setting_theme_apply": "Aplicar",
   "ui_setting_theme_preview": "Visualizar",
   "ui_setting_theme_description": "Descrição",
   "ui_setting_theme_empty_data": "Dados do tema vazios",
+  "ui_setting_theme_system_tag": "Sistema",
   "ui_back": "Voltar",
   "ui_operation": "Operação",
   "ui_query_hotkeys_hotkey": "Tecla de atalho",
@@ -223,5 +225,6 @@
   "plugin_manager_query_failed": "Consulta %s falhou",
   "plugin_manager_remove_from_favorite": "Remover dos favoritos",
   "plugin_manager_add_to_favorite": "Adicionar aos favoritos",
-  "plugin_manager_invalid_query_type": "Tipo de consulta inválido"
+  "plugin_manager_invalid_query_type": "Tipo de consulta inválido",
+  "ui_setting_plugin_system_tag": "Sistema"
 }
