--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -41,9 +41,11 @@
   "ui_setting_theme_website": "Веб-сайт",
   "ui_setting_theme_uninstall": "Удалить",
   "ui_setting_theme_install": "Установить",
+  "ui_setting_theme_apply": "Применить",
   "ui_setting_theme_preview": "Предпросмотр",
   "ui_setting_theme_description": "Описание",
   "ui_setting_theme_empty_data": "Данные темы пусты",
+  "ui_setting_theme_system_tag": "Системная",
   "ui_back": "Назад",
   "ui_operation": "Операция",
   "ui_query_hotkeys_hotkey": "Горячая клавиша",
@@ -223,5 +225,6 @@
   "plugin_manager_query_failed": "Запрос %s не выполнен",
   "plugin_manager_remove_from_favorite": "Удалить из избранного",
   "plugin_manager_add_to_favorite": "Добавить в избранное",
-  "plugin_manager_invalid_query_type": "Недопустимый тип запроса"
+  "plugin_manager_invalid_query_type": "Недопустимый тип запроса",
+  "ui_setting_plugin_system_tag": "Система"
 }
