--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -41,9 +41,11 @@
   "ui_setting_theme_website": "网站",
   "ui_setting_theme_uninstall": "卸载",
   "ui_setting_theme_install": "安装",
+  "ui_setting_theme_apply": "应用",
   "ui_setting_theme_preview": "预览",
   "ui_setting_theme_description": "描述",
   "ui_setting_theme_empty_data": "主题数据为空",
+  "ui_setting_theme_system_tag": "系统",
   "ui_back": "返回",
   "ui_operation": "操作",
   "ui_query_hotkeys_hotkey": "快捷键",
@@ -223,5 +225,6 @@
   "plugin_file_open_containing_folder": "打开所在文件夹",
   "plugin_manager_query_failed": "%s 查询失败",
   "plugin_manager_remove_from_favorite": "从收藏夹移除",
-  "plugin_manager_add_to_favorite": "添加到收藏夹"
+  "plugin_manager_add_to_favorite": "添加到收藏夹",
+  "ui_setting_plugin_system_tag": "系统"
 }
