feat(ui): Add configurable Wox display position across platforms #4145
- Introduce new setting for Wox window positioning (mouse screen, active screen, last location)
- Update language files with new position-related translations
- Implement cross-platform screen detection for active and mouse screen positions
- Add UI controls for selecting display position in settings
- Update Flutter and Go implementations to support new positioning logic

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -15,6 +15,11 @@
   "ui_hide_on_start_tips": "When selected, Wox will hide when it starts",
   "ui_show_tray": "Show tray icon",
   "ui_show_tray_tips": "When selected, Wox will show a tray icon",
+  "ui_show_position": "Display position",
+  "ui_show_position_tips": "Select where you want Wox to appear on your screen",
+  "ui_show_position_mouse_screen": "Mouse screen",
+  "ui_show_position_active_screen": "Active screen",
+  "ui_show_position_last_location": "Last location",
   "ui_switch_input_method_abc": "Switch to ABC",
   "ui_switch_input_method_abc_tips": "When selected, the input method will be switched to english",
   "ui_lang": "Language",
