--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -15,6 +15,11 @@
   "ui_hide_on_start_tips": "Quando selecionado, o Wox será ocultado ao iniciar",
   "ui_show_tray": "Mostrar ícone na bandeja",
   "ui_show_tray_tips": "Quando selecionado, o Wox exibirá um ícone na bandeja",
+  "ui_show_position": "Posição",
+  "ui_show_position_tips": "Selecione onde o Wox deve aparecer na tela",
+  "ui_show_position_mouse_screen": "Mouse na tela",
+  "ui_show_position_active_screen": "Tela ativa",
+  "ui_show_position_last_location": "Última posição",
   "ui_switch_input_method_abc": "Alternar para ABC",
   "ui_switch_input_method_abc_tips": "Quando selecionado, o método de entrada será alterado para o inglês",
   "ui_lang": "Idioma",
