--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -15,6 +15,11 @@
   "ui_hide_on_start_tips": "При выборе Wox будет скрываться при запуске",
   "ui_show_tray": "Показать значок в трее",
   "ui_show_tray_tips": "При выборе Wox будет показывать значок в трее",
+  "ui_show_position": "Положение",
+  "ui_show_position_tips": "Выберите, где должно появляться Wox",
+  "ui_show_position_mouse_screen": "Мышь на экране",
+  "ui_show_position_active_screen": "Активный экран",
+  "ui_show_position_last_location": "Последнее положение",
   "ui_switch_input_method_abc": "Переключить на ABC",
   "ui_switch_input_method_abc_tips": "При выборе метод ввода будет переключен на английский",
   "ui_lang": "Язык",
