--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -15,6 +15,11 @@
   "ui_hide_on_start_tips": "选中后，Wox启动时将隐藏",
   "ui_show_tray": "显示托盘图标",
   "ui_show_tray_tips": "选中后，Wox将显示托盘图标",
+  "ui_show_position": "显示位置",
+  "ui_show_position_tips": "选择Wox在屏幕上显示的位置",
+  "ui_show_position_mouse_screen": "鼠标所在屏幕",
+  "ui_show_position_active_screen": "活动屏幕",
+  "ui_show_position_last_location": "上次位置",
   "ui_switch_input_method_abc": "切换输入法",
   "ui_switch_input_method_abc_tips": "选中后，输入法将切换到英文",
   "ui_lang": "语言",
