--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -102,6 +102,11 @@
   "ui_plugin_trigger_keyword_tooltip": "触发此插件的关键词。* 表示无关键词，任何输入都会触发此插件。",
   "ui_plugin_command_name_column": "名称",
   "ui_plugin_command_desc_column": "描述",
+  "ui_setting_plugin_system_tag": "系统",
+  "ui_setting_plugin_empty_data": "插件数据为空",
+  "ui_delete_row_confirm": "确定要删除此行吗？",
+  "ui_cancel": "取消",
+  "ui_delete": "删除",
   "plugin_app_open": "打开",
   "plugin_app_open_containing_folder": "打开所在文件夹",
   "plugin_app_copy_path": "复制路径",
@@ -230,6 +235,5 @@
   "plugin_file_open_containing_folder": "打开所在文件夹",
   "plugin_manager_query_failed": "%s 查询失败",
   "plugin_manager_remove_from_favorite": "从收藏夹移除",
-  "plugin_manager_add_to_favorite": "添加到收藏夹",
-  "ui_setting_plugin_system_tag": "系统"
+  "plugin_manager_add_to_favorite": "添加到收藏夹"
 }
