feat(ui): Add new settings pane for data management and localization updates [WIP]
- Introduce new "Data" settings pane in the application
- Add localization keys for AI model and data settings
- Update setting view to include data management section
- Refactor setting view classes to use a common base view
- Update pane index references in setting controller

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -72,6 +72,7 @@
   "ui_ai_providers_host_tooltip": "The host of the AI provider.",
   "ui_ai_providers_api_key_required": "API key is required.",
   "ui_ai_providers_host_required": "Host is required.",
+  "ui_ai_model": "AI Model",
   "ui_search_plugins": "Search %d plugins",
   "ui_plugin_website": "Website",
   "ui_plugin_dev_tag": "dev",
@@ -106,6 +107,7 @@
   "ui_delete_row_confirm": "Are you sure you want to delete this row?",
   "ui_cancel": "Cancel",
   "ui_delete": "Delete",
+  "ui_data": "Data",
   "plugin_app_open": "Open",
   "plugin_app_open_containing_folder": "Open Containing Folder",
   "plugin_app_copy_path": "Copy Path",
