--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -72,6 +72,7 @@
   "ui_ai_providers_host_tooltip": "O host do provedor de IA.",
   "ui_ai_providers_api_key_required": "A chave de API obrigatória.",
   "ui_ai_providers_host_required": "O host obrigatório.",
+  "ui_ai_model": "Modelo de IA",
   "ui_search_plugins": "Pesquisar %d plugins",
   "ui_plugin_website": "Website",
   "ui_plugin_dev_tag": "dev",
@@ -106,6 +107,7 @@
   "ui_delete_row_confirm": "Tem certeza que deseja excluir esta linha?",
   "ui_cancel": "Cancelar",
   "ui_delete": "Excluir",
+  "ui_data": "Dados",
   "plugin_app_open": "Abrir",
   "plugin_app_open_containing_folder": "Abrir pasta contendo",
   "plugin_app_copy_path": "Copiar caminho",
