--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -72,6 +72,7 @@
   "ui_ai_providers_host_tooltip": "Хост поставщика",
   "ui_ai_providers_api_key_required": "API-ключ обязателен",
   "ui_ai_providers_host_required": "Хост обязателен",
+  "ui_ai_model": "Модель",
   "ui_search_plugins": "Найти %d плагинов",
   "ui_plugin_website": "Сайт",
   "ui_plugin_dev_tag": "dev",
@@ -106,6 +107,7 @@
   "ui_delete_row_confirm": "Вы уверены, что хотите удалить эту строку?",
   "ui_cancel": "Отмена",
   "ui_delete": "Удалить",
+  "ui_data": "Данные",
   "plugin_app_open": "Открыть",
   "plugin_app_open_containing_folder": "Открыть содержащую папку",
   "plugin_app_copy_path": "Копировать путь",
