--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -72,8 +72,8 @@
   "ui_ai_providers_host_tooltip": "API地址",
   "ui_ai_providers_api_key_required": "API密钥是必需的",
   "ui_ai_providers_host_required": "API地址是必需的",
+  "ui_ai_model": "AI模型",
   "ui_search_plugins": "搜索 %d 个插件",
-  "plugin_manager_invalid_query_type": "无效的查询类型",
   "ui_plugin_website": "网站",
   "ui_plugin_dev_tag": "开发",
   "ui_plugin_uninstall": "卸载",
@@ -107,6 +107,7 @@
   "ui_delete_row_confirm": "确定要删除此行吗？",
   "ui_cancel": "取消",
   "ui_delete": "删除",
+  "ui_data": "数据",
   "plugin_app_open": "打开",
   "plugin_app_open_containing_folder": "打开所在文件夹",
   "plugin_app_copy_path": "复制路径",
