feat(data): Add user data directory configuration and management
- Implement new feature to change Wox user data directory location
- Add backend support for copying and updating user data directory
- Create new API endpoints for retrieving and updating data location
- Update localization files with new data configuration translations
- Enhance Flutter UI with data location selection and confirmation dialog
- Refactor setting views and controllers to support new data management feature

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -36,6 +36,18 @@
   "ui_proxy_url": "Proxy URL",
   "ui_proxy_url_tips": "Proxy address, e.g. http://localhost:7890",
   "ui_network": "Network",
+  "ui_data": "Data",
+  "ui_data_config_location": "Configuration Location",
+  "ui_data_config_location_tips": "The location where Wox stores your configuration and data files, you can change it to cloud storage location(e.g. iCloud) to sync configurations and data on different computers",
+  "ui_data_config_location_change": "Change Location",
+  "ui_data_config_location_select": "Select new configuration location",
+  "ui_data_config_location_change_confirm": "Are you sure you want to change the configuration location to {0}? This will copy all your current settings and data to the new location.",
+  "ui_data_config_location_change_cancel": "Cancel",
+  "ui_data_config_location_change_confirm_button": "Change",
+  "ui_data_config_location_change_success_title": "Location Changed",
+  "ui_data_config_location_change_success_message": "Configuration location has been changed successfully",
+  "ui_data_config_location_change_error_title": "Error",
+  "ui_data_config_location_change_error_message": "Failed to change configuration location: {0}",
   "ui_plugins": "Plugins",
   "ui_store_plugins": "Store Plugins",
   "ui_installed_plugins": "Installed Plugins",
@@ -107,7 +119,6 @@
   "ui_delete_row_confirm": "Are you sure you want to delete this row?",
   "ui_cancel": "Cancel",
   "ui_delete": "Delete",
-  "ui_data": "Data",
   "plugin_app_open": "Open",
   "plugin_app_open_containing_folder": "Open Containing Folder",
   "plugin_app_copy_path": "Copy Path",
