--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -36,6 +36,18 @@
   "ui_proxy_url": "URL do Proxy",
   "ui_proxy_url_tips": "Endereo do proxy, por exemplo: http://localhost:7890",
   "ui_network": "Rede",
+  "ui_data": "Dados",
+  "ui_data_config_location": "Local da Configuração",
+  "ui_data_config_location_tips": "O local onde o Wox armazena seus arquivos de configuração e dados, você pode alterá-lo para o local de armazenamento de nuvem(por exemplo, iCloud) para sincronizar configurações e dados em diferentes computadores",
+  "ui_data_config_location_change": "Alterar Local",
+  "ui_data_config_location_select": "Selecione o novo local de configuração",
+  "ui_data_config_location_change_confirm": "Tem certeza que deseja alterar o local de configuração para {0}? Isso copiará todas as suas configurações e dados atuais para o novo local.",
+  "ui_data_config_location_change_cancel": "Cancelar",
+  "ui_data_config_location_change_confirm_button": "Alterar",
+  "ui_data_config_location_change_success_title": "Local Alterado",
+  "ui_data_config_location_change_success_message": "Local de configuração foi alterado com sucesso",
+  "ui_data_config_location_change_error_title": "Erro",
+  "ui_data_config_location_change_error_message": "Falha ao alterar o local de configuração: {0}",
   "ui_plugins": "Plugins",
   "ui_store_plugins": "Plugins da loja",
   "ui_installed_plugins": "Plugins instalados",
@@ -107,7 +119,6 @@
   "ui_delete_row_confirm": "Tem certeza que deseja excluir esta linha?",
   "ui_cancel": "Cancelar",
   "ui_delete": "Excluir",
-  "ui_data": "Dados",
   "plugin_app_open": "Abrir",
   "plugin_app_open_containing_folder": "Abrir pasta contendo",
   "plugin_app_copy_path": "Copiar caminho",
