--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -36,6 +36,18 @@
   "ui_proxy_url": "URL прокси",
   "ui_proxy_url_tips": "Адрес прокси, например: http://localhost:7890",
   "ui_network": "Сеть",
+  "ui_data": "Данные",
+  "ui_data_config_location": "Расположение конфигурации",
+  "ui_data_config_location_tips": "Место, где Wox хранит ваши файлы конфигурации и данных, вы можете изменить его на облачное хранилище(например, iCloud) для синхронизации конфигураций и данных на разных компьютерах",
+  "ui_data_config_location_change": "Изменить расположение",
+  "ui_data_config_location_select": "Выберите новое расположение конфигурации",
+  "ui_data_config_location_change_confirm": "Вы уверены, что хотите изменить расположение конфигурации на {0}? Это скопирует все ваши текущие настройки и данные в новое место.",
+  "ui_data_config_location_change_cancel": "Отмена",
+  "ui_data_config_location_change_confirm_button": "Изменить",
+  "ui_data_config_location_change_success_title": "Расположение изменено",
+  "ui_data_config_location_change_success_message": "Расположение конфигурации успешно изменено",
+  "ui_data_config_location_change_error_title": "Ошибка",
+  "ui_data_config_location_change_error_message": "Не удалось изменить расположение конфигурации: {0}",
   "ui_plugins": "Плагины",
   "ui_store_plugins": "Плагины магазина",
   "ui_installed_plugins": "Установленные плагины",
@@ -107,7 +119,6 @@
   "ui_delete_row_confirm": "Вы уверены, что хотите удалить эту строку?",
   "ui_cancel": "Отмена",
   "ui_delete": "Удалить",
-  "ui_data": "Данные",
   "plugin_app_open": "Открыть",
   "plugin_app_open_containing_folder": "Открыть содержащую папку",
   "plugin_app_copy_path": "Копировать путь",
