--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -36,6 +36,18 @@
   "ui_proxy_url": "代理地址",
   "ui_proxy_url_tips": "代理地址，例如：http://localhost:7890",
   "ui_network": "网络",
+  "ui_data": "数据",
+  "ui_data_config_location": "配置位置",
+  "ui_data_config_location_tips": "Wox存储配置和数据文件的位置,你可以使用网盘位置(例如icloud)在不同电脑上同步配置和数据",
+  "ui_data_config_location_change": "更改位置",
+  "ui_data_config_location_select": "选择新的配置位置",
+  "ui_data_config_location_change_confirm": "您确定要将配置位置更改为{0}吗？这将把您当前的所有设置和数据复制到新位置。",
+  "ui_data_config_location_change_cancel": "取消",
+  "ui_data_config_location_change_confirm_button": "更改",
+  "ui_data_config_location_change_success_title": "位置已更改",
+  "ui_data_config_location_change_success_message": "配置位置已成功更改",
+  "ui_data_config_location_change_error_title": "错误",
+  "ui_data_config_location_change_error_message": "更改配置位置失败：{0}",
   "ui_plugins": "插件",
   "ui_store_plugins": "插件商店",
   "ui_installed_plugins": "已安装插件",
@@ -107,7 +119,6 @@
   "ui_delete_row_confirm": "确定要删除此行吗？",
   "ui_cancel": "取消",
   "ui_delete": "删除",
-  "ui_data": "数据",
   "plugin_app_open": "打开",
   "plugin_app_open_containing_folder": "打开所在文件夹",
   "plugin_app_copy_path": "复制路径",
