feat(backup): Implement data backup and restore functionality #4145
- Add auto backup feature with configurable settings
- Create new backup management UI in Flutter
- Implement backup and restore API endpoints
- Update language files with backup-related translations
- Add support for manual and automatic backups
- Enhance data management settings with backup list and restore options

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -119,6 +119,21 @@
   "ui_delete_row_confirm": "Are you sure you want to delete this row?",
   "ui_cancel": "Cancel",
   "ui_delete": "Delete",
+  "ui_data_backup_auto_title": "Auto Backup",
+  "ui_data_backup_auto_tips": "Enable auto backup to backup your data daily",
+  "ui_data_backup_list_title": "Backup List",
+  "ui_data_backup_now": "Backup Now",
+  "ui_data_backup_refresh": "Refresh",
+  "ui_data_backup_empty": "No backup found",
+  "ui_data_backup_restore": "Restore",
+  "ui_data_backup_restore_confirm_title": "Restore Backup",
+  "ui_data_backup_restore_confirm_message": "Are you sure you want to restore this backup? Your current data will be overwritten.",
+  "ui_data_backup_restore_cancel": "Cancel",
+  "ui_data_backup_restore_confirm": "Restore",
+  "ui_data_backup_date": "Date",
+  "ui_data_backup_type": "Type",
+  "ui_data_backup_type_auto": "Auto",
+  "ui_data_backup_type_manual": "Manual",
   "plugin_app_open": "Open",
   "plugin_app_open_containing_folder": "Open Containing Folder",
   "plugin_app_copy_path": "Copy Path",
