--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -119,6 +119,21 @@
   "ui_delete_row_confirm": "Tem certeza que deseja excluir esta linha?",
   "ui_cancel": "Cancelar",
   "ui_delete": "Excluir",
+  "ui_data_backup_auto_title": "Backup automático",
+  "ui_data_backup_auto_tips": "Habilitar backup automático para salvar as configurações do Wox diariamente",
+  "ui_data_backup_list_title": "Lista de backups",
+  "ui_data_backup_now": "Fazer backup agora",
+  "ui_data_backup_refresh": "Atualizar",
+  "ui_data_backup_empty": "Nenhum backup encontrado",
+  "ui_data_backup_restore": "Restaurar",
+  "ui_data_backup_restore_confirm_title": "Restaurar backup",
+  "ui_data_backup_restore_confirm_message": "Tem certeza que deseja restaurar este backup? Isso substituirá suas configurações atuais do Wox.",
+  "ui_data_backup_restore_cancel": "Cancelar",
+  "ui_data_backup_restore_confirm": "Restaurar",
+  "ui_data_backup_date": "Data",
+  "ui_data_backup_type": "Tipo",
+  "ui_data_backup_type_auto": "Auto",
+  "ui_data_backup_type_manual": "Manual",
   "plugin_app_open": "Abrir",
   "plugin_app_open_containing_folder": "Abrir pasta contendo",
   "plugin_app_copy_path": "Copiar caminho",
