--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -119,6 +119,21 @@
   "ui_delete_row_confirm": "Вы уверены, что хотите удалить эту строку?",
   "ui_cancel": "Отмена",
   "ui_delete": "Удалить",
+  "ui_data_backup_auto_title": "Автоматическая резервная копия",
+  "ui_data_backup_auto_tips": "Включить автоматическую резервную копию для ежедневного резервного копирования настроек Wox",
+  "ui_data_backup_list_title": "Список резервных копий",
+  "ui_data_backup_now": "Сделать резервную копию сейчас",
+  "ui_data_backup_refresh": "Обновить",
+  "ui_data_backup_empty": "Резервные копии не найдены",
+  "ui_data_backup_restore": "Восстановить",
+  "ui_data_backup_restore_confirm_title": "Восстановить резервную копию",
+  "ui_data_backup_restore_confirm_message": "Вы уверены, что хотите восстановить эту резервную копию? Это заменит ваши текущие настройки Wox.",
+  "ui_data_backup_restore_cancel": "Отмена",
+  "ui_data_backup_restore_confirm": "Восстановить",
+  "ui_data_backup_date": "Дата",
+  "ui_data_backup_type": "Тип",
+  "ui_data_backup_type_auto": "Авто",
+  "ui_data_backup_type_manual": "Ручной",
   "plugin_app_open": "Открыть",
   "plugin_app_open_containing_folder": "Открыть содержащую папку",
   "plugin_app_copy_path": "Копировать путь",
