--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -119,6 +119,21 @@
   "ui_delete_row_confirm": "确定要删除此行吗？",
   "ui_cancel": "取消",
   "ui_delete": "删除",
+  "ui_data_backup_auto_title": "自动备份",
+  "ui_data_backup_auto_tips": "启用自动备份，每天备份一次Wox设置",
+  "ui_data_backup_list_title": "备份列表",
+  "ui_data_backup_now": "立即备份",
+  "ui_data_backup_refresh": "刷新",
+  "ui_data_backup_empty": "没有备份",
+  "ui_data_backup_restore": "恢复",
+  "ui_data_backup_restore_confirm_title": "恢复备份",
+  "ui_data_backup_restore_confirm_message": "确定要恢复此备份吗？这将覆盖您当前的Wox设置。",
+  "ui_data_backup_restore_cancel": "取消",
+  "ui_data_backup_restore_confirm": "恢复",
+  "ui_data_backup_date": "日期",
+  "ui_data_backup_type": "类型",
+  "ui_data_backup_type_auto": "自动",
+  "ui_data_backup_type_manual": "手动",
   "plugin_app_open": "打开",
   "plugin_app_open_containing_folder": "打开所在文件夹",
   "plugin_app_copy_path": "复制路径",
