feat(backup): Enhance backup functionality and fix proxy url textbox issues #4144
- Add ability to open backup and user data folders directly from settings
- Update router to support generic file/folder opening
- Modify backup struct to include full backup path
- Improve backup restore confirmation message in language files
- Add open folder buttons in backup and data location sections
- Remove deprecated proxy settings view

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -127,7 +127,7 @@
   "ui_data_backup_empty": "No backup found",
   "ui_data_backup_restore": "Restore",
   "ui_data_backup_restore_confirm_title": "Restore Backup",
-  "ui_data_backup_restore_confirm_message": "Are you sure you want to restore this backup? Your current data will be overwritten.",
+  "ui_data_backup_restore_confirm_message": "Are you sure you want to restore this backup? This will replace all your current settings and data.",
   "ui_data_backup_restore_cancel": "Cancel",
   "ui_data_backup_restore_confirm": "Restore",
   "ui_data_backup_date": "Date",
