--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -124,10 +124,10 @@
   "ui_data_backup_list_title": "备份列表",
   "ui_data_backup_now": "立即备份",
   "ui_data_backup_refresh": "刷新",
-  "ui_data_backup_empty": "没有备份",
+  "ui_data_backup_empty": "没有找到备份",
   "ui_data_backup_restore": "恢复",
   "ui_data_backup_restore_confirm_title": "恢复备份",
-  "ui_data_backup_restore_confirm_message": "确定要恢复此备份吗？这将覆盖您当前的Wox设置。",
+  "ui_data_backup_restore_confirm_message": "你确定要恢复这个备份吗？这将替换你当前的所有设置和数据。",
   "ui_data_backup_restore_cancel": "取消",
   "ui_data_backup_restore_confirm": "恢复",
   "ui_data_backup_date": "日期",
