feat(ai): Allow user to edit the ai model name #4144
- Implement new `/plugin/detail` endpoint to retrieve specific plugin details
- Refactor plugin loading and refresh mechanisms in the settings controller
- Add support for dynamic plugin list updates (add/remove/update)
- Optimize plugin state management and reduce unnecessary API calls
- Remove loading state artifacts and improve plugin list rendering

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -134,6 +134,10 @@
   "ui_data_backup_type": "Type",
   "ui_data_backup_type_auto": "Auto",
   "ui_data_backup_type_manual": "Manual",
+  "ui_ai_model_selector_name": "Name",
+  "ui_ai_model_selector_model_name": "Model name",
+  "ui_ai_model_selector_cancel": "Cancel",
+  "ui_ai_model_selector_save": "Save",
   "plugin_app_open": "Open",
   "plugin_app_open_containing_folder": "Open Containing Folder",
   "plugin_app_copy_path": "Copy Path",
