--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -134,6 +134,10 @@
   "ui_data_backup_type": "Tipo",
   "ui_data_backup_type_auto": "Auto",
   "ui_data_backup_type_manual": "Manual",
+  "ui_ai_model_selector_name": "Nome",
+  "ui_ai_model_selector_model_name": "Nome do modelo",
+  "ui_ai_model_selector_cancel": "Cancelar",
+  "ui_ai_model_selector_save": "Salvar",
   "plugin_app_open": "Abrir",
   "plugin_app_open_containing_folder": "Abrir pasta contendo",
   "plugin_app_copy_path": "Copiar caminho",
