--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -134,6 +134,10 @@
   "ui_data_backup_type": "Тип",
   "ui_data_backup_type_auto": "Авто",
   "ui_data_backup_type_manual": "Ручной",
+  "ui_ai_model_selector_name": "Имя",
+  "ui_ai_model_selector_model_name": "Имя модели",
+  "ui_ai_model_selector_cancel": "Отмена",
+  "ui_ai_model_selector_save": "Сохранить",
   "plugin_app_open": "Открыть",
   "plugin_app_open_containing_folder": "Открыть содержащую папку",
   "plugin_app_copy_path": "Копировать путь",
