--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -134,6 +134,10 @@
   "ui_data_backup_type": "类型",
   "ui_data_backup_type_auto": "自动",
   "ui_data_backup_type_manual": "手动",
+  "ui_ai_model_selector_name": "名称",
+  "ui_ai_model_selector_model_name": "模型名称",
+  "ui_ai_model_selector_cancel": "取消",
+  "ui_ai_model_selector_save": "保存",
   "plugin_app_open": "打开",
   "plugin_app_open_containing_folder": "打开所在文件夹",
   "plugin_app_copy_path": "复制路径",
